fix overlap location-label & settingsButton

--- a/src/app/components/slider-header/slider-header.component.scss
+++ b/src/app/components/slider-header/slider-header.component.scss
@@ -1,7 +1,7 @@
 :host {
   .settingsButton {
     position: absolute;
-    right: 0;
+    right: -0.4em;
 
     ion-button {
       color: var(--panel-background);
@@ -22,6 +22,7 @@
       h2 {
         white-space: normal;
         overflow: hidden;
+        margin: 0 0.7em;
       }
     }
   }
@@ -31,7 +32,7 @@
     width: 90%;
     margin-left: 5%;
   }
-  
+
   .rowWithWarningCurrentLocation {
     height: 8em;
   }
